// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingContent is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingContent testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 1 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 2 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 3 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 4 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 5 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 6 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 7 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 8 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 9 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`EuiLoadingContent lines 10 is rendered 1`] = `
<span
  class="euiLoadingContent"
>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="euiLoadingContent__singleLine"
  >
    <span
      class="euiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;
